--- a/Lab4/Lab4.ipynb
+++ b/Lab4/Lab4.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.14.3'"
+       "'1.18.1'"
       ]
      },
      "execution_count": 1,
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,18 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iustin.petrisor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\skimage\\feature\\texture.py:109: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  if np.issubdtype(image.dtype, np.float):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "images = []\n",
     "labels = []\n",
@@ -76,11 +67,11 @@
     "    \n",
     "    gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    glcm = greycomatrix(gray_img, [1], [0, np.pi / 2], 256, symmetric=True, normed=True)\n",
-    "    feature = [greycoprops(glcm, 'correlation')[0, 0], \\\n",
-    "               greycoprops(glcm, 'dissimilarity')[0, 0], \\\n",
-    "               greycoprops(glcm, 'contrast')[0, 0], \\\n",
-    "               greycoprops(glcm, 'homogeneity')[0, 0], \\\n",
-    "               greycoprops(glcm, 'energy')[0, 0] \\\n",
+    "    feature = [greycoprops(glcm, 'correlation')[0, 0] \\\n",
+    "#                greycoprops(glcm, 'dissimilarity')[0, 0], \\\n",
+    "#                greycoprops(glcm, 'contrast')[0, 0], \\\n",
+    "#                greycoprops(glcm, 'homogeneity')[0, 0], \\\n",
+    "#                greycoprops(glcm, 'energy')[0, 0] \\\n",
     "                  ]\n",
     "    \n",
     "    features.append(np.array(feature))"
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,32 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Found array with dim 4. Estimator expected <= 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-267-062fe986bc4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGaussianNB\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\naive_bayes.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    181\u001b[0m             \u001b[0mReturns\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m         \"\"\"\n\u001b[1;32m--> 183\u001b[1;33m         \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    184\u001b[0m         return self._partial_fit(X, y, np.unique(y), _refit=True,\n\u001b[0;32m    185\u001b[0m                                  sample_weight=sample_weight)\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    571\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[0;32m    572\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 573\u001b[1;33m                     ensure_min_features, warn_on_dtype, estimator)\n\u001b[0m\u001b[0;32m    574\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    575\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    449\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_nd\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    450\u001b[0m             raise ValueError(\"Found array with dim %d. %s expected <= 2.\"\n\u001b[1;32m--> 451\u001b[1;33m                              % (array.ndim, estimator_name))\n\u001b[0m\u001b[0;32m    452\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    453\u001b[0m             \u001b[0m_assert_all_finite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Found array with dim 4. Estimator expected <= 2."
-     ]
-    }
-   ],
-   "source": [
-    "clf = GaussianNB()\n",
-    "clf.fit(images, labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,46 +110,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 24703.843789985396\n",
-      "162 24038.28180215882\n",
-      "165 23999.58893397968\n",
-      "359 23493.73354748027\n"
+      "0 20597.142884390545\n",
+      "165 20133.89261916334\n",
+      "261 20058.48760500153\n",
+      "357 19496.119767789693\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(120, 359, 3)"
+       "(120, 357, 41)"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_neighbour(7, images, labels)"
+    "find_neighbour(122, images, labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.94721194,  3.55071276, 22.37864282,  0.25318672,  0.03833141])"
+       "array([ 0.95045057,  3.440065  , 21.19688951,  0.26071049,  0.03866363])"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
