--- a/Lab4/Lab4_Neural_network.ipynb
+++ b/Lab4/Lab4_Neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'1.18.1'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,26 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iustin.petrisor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +106,7 @@
        "(1,)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,63 +145,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1,)"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train[0].shape"
+    "\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 307 samples, validate on 77 samples\n",
+      "Train on 382 samples, validate on 2 samples\n",
       "Epoch 1/10\n",
-      "307/307 [==============================] - 1s 2ms/step - loss: 4.8946 - accuracy: 0.0033 - val_loss: 5.1010 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 2ms/step - loss: 4.9063 - accuracy: 0.0026 - val_loss: 5.0463 - val_accuracy: 0.0000e+00\n",
       "Epoch 2/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.7768 - accuracy: 0.0065 - val_loss: 6.3265 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8680 - accuracy: 0.0000e+00 - val_loss: 5.0565 - val_accuracy: 0.0000e+00\n",
       "Epoch 3/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.7188 - accuracy: 0.0000e+00 - val_loss: 6.6968 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8652 - accuracy: 0.0052 - val_loss: 5.1110 - val_accuracy: 0.0000e+00\n",
       "Epoch 4/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6931 - accuracy: 0.0000e+00 - val_loss: 7.3068 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8644 - accuracy: 0.0052 - val_loss: 5.1050 - val_accuracy: 0.0000e+00\n",
       "Epoch 5/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6796 - accuracy: 0.0000e+00 - val_loss: 7.4518 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8614 - accuracy: 0.0079 - val_loss: 5.1350 - val_accuracy: 0.0000e+00\n",
       "Epoch 6/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6698 - accuracy: 0.0000e+00 - val_loss: 7.8888 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8597 - accuracy: 0.0052 - val_loss: 5.1618 - val_accuracy: 0.0000e+00\n",
       "Epoch 7/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6665 - accuracy: 0.0000e+00 - val_loss: 8.0122 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8590 - accuracy: 0.0026 - val_loss: 5.1824 - val_accuracy: 0.0000e+00\n",
       "Epoch 8/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6604 - accuracy: 0.0065 - val_loss: 8.4865 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8584 - accuracy: 0.0026 - val_loss: 5.2061 - val_accuracy: 0.0000e+00\n",
       "Epoch 9/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6617 - accuracy: 0.0033 - val_loss: 8.4551 - val_accuracy: 0.0000e+00\n",
+      "382/382 [==============================] - 1s 2ms/step - loss: 4.8593 - accuracy: 0.0000e+00 - val_loss: 5.2301 - val_accuracy: 0.0000e+00\n",
       "Epoch 10/10\n",
-      "307/307 [==============================] - 0s 2ms/step - loss: 4.6575 - accuracy: 0.0033 - val_loss: 8.5655 - val_accuracy: 0.0000e+00\n"
+      "382/382 [==============================] - 1s 1ms/step - loss: 4.8579 - accuracy: 0.0079 - val_loss: 5.2529 - val_accuracy: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x21ba9875e80>"
+       "<keras.callbacks.callbacks.History at 0x21baed29e80>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +201,7 @@
     "\n",
     "model.add(Dense(256, activation='relu', input_shape=(X_train[0].shape[0],)))\n",
     "\n",
-    "model.add(Dropout(0.5, noise_shape=None, seed=None))\n",
+    "model.add(Dropout(0.2, noise_shape=None, seed=None))\n",
     "model.add(Dense(512, activation='relu'))\n",
     "\n",
     "model.add(Dense(129, activation='softmax'))\n",
@@ -229,12 +209,19 @@
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "                   \n",
-    "model.fit(X_train, Y_train,epochs=10, batch_size=1, verbose=1, shuffle=True, validation_split=0.2)"
+    "model.fit(X_train, Y_train,epochs=10, batch_size=1, verbose=1, shuffle=True, validation_split=1/383)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,47 +230,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36781"
+       "107"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.argmax(p)"
+    "np.argmax(p[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_51\"\n",
+      "Model: \"sequential_53\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_145 (Dense)            (None, 256)               1792      \n",
+      "dense_151 (Dense)            (None, 256)               512       \n",
       "_________________________________________________________________\n",
-      "dropout_12 (Dropout)         (None, 256)               0         \n",
+      "dropout_14 (Dropout)         (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_146 (Dense)            (None, 512)               131584    \n",
+      "dense_152 (Dense)            (None, 512)               131584    \n",
       "_________________________________________________________________\n",
-      "dense_147 (Dense)            (None, 129)               66177     \n",
+      "dense_153 (Dense)            (None, 129)               66177     \n",
       "=================================================================\n",
-      "Total params: 199,553\n",
-      "Trainable params: 199,553\n",
+      "Total params: 198,273\n",
+      "Trainable params: 198,273\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -295,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +292,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-175-48615f2632a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-197-48615f2632a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m   1152\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1153\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1154\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m   1155\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1156\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[0;32m    577\u001b[0m             \u001b[0mfeed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    578\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Don't enforce the batch size.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 579\u001b[1;33m             exception_prefix='input')\n\u001b[0m\u001b[0;32m    580\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    581\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    107\u001b[0m                 \u001b[1;34m'Expected to see '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' array(s), '\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m                 \u001b[1;34m'but instead got the following list of '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 109\u001b[1;33m                 str(len(data)) + ' arrays: ' + str(data)[:200] + '...')\n\u001b[0m\u001b[0;32m    110\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    111\u001b[0m             raise ValueError(\n",
