--- a/Lab3/vowls_nouns.ipynb
+++ b/Lab3/vowls_nouns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x235cd5941d0>"
+       "<matplotlib.image.AxesImage at 0x235d5f7f9b0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,19 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iustin.petrisor\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras import optimizers\n",
@@ -105,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
     "#add model layers\n",
-    "model.add(Conv2D(64, kernel_size=3, activation='relu', input_shape=(28,28,1)))\n",
-    "model.add(Conv2D(32, kernel_size=3, activation='relu'))\n",
+    "model.add(Conv2D(64, kernel_size=4, activation='relu', input_shape=(28,28,1)))\n",
+    "model.add(Conv2D(32, kernel_size=4, activation='relu'))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
@@ -120,24 +110,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "images = np.array(images_vows + images_nouns)\n",
-    "X_train = images.reshape(images.shape[0], 28, 28, 1)\n"
+    "X_train = images.reshape(images.shape[0], 28, 28, 1)\n",
+    "X_train = X_train / 255"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -145,156 +149,76 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "1/0 [======================================] - 0s 242ms/step - loss: 0.6977 - accuracy: 0.5200\n",
+      "1/0 [======================================] - 0s 44ms/step - loss: 0.4452 - accuracy: 0.8000\n",
       "Epoch 2/30\n",
-      "1/0 [======================================] - 0s 35ms/step - loss: 0.5650 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 110ms/step - loss: 0.4960 - accuracy: 0.7200\n",
       "Epoch 3/30\n",
-      "1/0 [======================================] - 0s 66ms/step - loss: 0.5887 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 90ms/step - loss: 0.4003 - accuracy: 0.8000\n",
       "Epoch 4/30\n",
-      "1/0 [======================================] - 0s 119ms/step - loss: 0.5667 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 122ms/step - loss: 0.4754 - accuracy: 0.8000\n",
       "Epoch 5/30\n",
-      "1/0 [======================================] - 0s 83ms/step - loss: 0.5343 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 79ms/step - loss: 0.4838 - accuracy: 0.8000\n",
       "Epoch 6/30\n",
-      "1/0 [======================================] - 0s 110ms/step - loss: 0.5225 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 149ms/step - loss: 0.4332 - accuracy: 0.7600\n",
       "Epoch 7/30\n",
-      "1/0 [======================================] - 0s 93ms/step - loss: 0.5291 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 90ms/step - loss: 0.4188 - accuracy: 0.8400\n",
       "Epoch 8/30\n",
-      "1/0 [======================================] - 0s 103ms/step - loss: 0.4984 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 117ms/step - loss: 0.5328 - accuracy: 0.7200\n",
       "Epoch 9/30\n",
-      "1/0 [======================================] - 0s 156ms/step - loss: 0.5375 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 57ms/step - loss: 0.4905 - accuracy: 0.8400\n",
       "Epoch 10/30\n",
-      "1/0 [======================================] - 0s 51ms/step - loss: 0.4894 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 154ms/step - loss: 0.4692 - accuracy: 0.8400\n",
       "Epoch 11/30\n",
-      "1/0 [======================================] - 0s 150ms/step - loss: 0.5600 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 77ms/step - loss: 0.4088 - accuracy: 0.8000\n",
       "Epoch 12/30\n",
-      "1/0 [======================================] - 0s 56ms/step - loss: 0.4298 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 122ms/step - loss: 0.5417 - accuracy: 0.8000\n",
       "Epoch 13/30\n",
-      "1/0 [======================================] - 0s 113ms/step - loss: 0.4640 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 93ms/step - loss: 0.4388 - accuracy: 0.8400\n",
       "Epoch 14/30\n",
-      "1/0 [======================================] - 0s 88ms/step - loss: 0.4669 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 115ms/step - loss: 0.4031 - accuracy: 0.7600\n",
       "Epoch 15/30\n",
-      "1/0 [======================================] - 0s 102ms/step - loss: 0.4932 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 122ms/step - loss: 0.4865 - accuracy: 0.8000\n",
       "Epoch 16/30\n",
-      "1/0 [======================================] - 0s 103ms/step - loss: 0.4862 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 45ms/step - loss: 0.5388 - accuracy: 0.7600\n",
       "Epoch 17/30\n",
-      "1/0 [======================================] - 0s 112ms/step - loss: 0.4964 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 117ms/step - loss: 0.4729 - accuracy: 0.8000\n",
       "Epoch 18/30\n",
-      "1/0 [======================================] - 0s 135ms/step - loss: 0.4191 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 84ms/step - loss: 0.5037 - accuracy: 0.7200\n",
       "Epoch 19/30\n",
-      "1/0 [======================================] - 0s 111ms/step - loss: 0.3919 - accuracy: 0.8800\n",
+      "1/0 [======================================] - 0s 148ms/step - loss: 0.4334 - accuracy: 0.7600\n",
       "Epoch 20/30\n",
-      "1/0 [======================================] - 0s 96ms/step - loss: 0.4887 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 83ms/step - loss: 0.4893 - accuracy: 0.8000\n",
       "Epoch 21/30\n",
-      "1/0 [======================================] - 0s 111ms/step - loss: 0.6301 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 116ms/step - loss: 0.3970 - accuracy: 0.8400\n",
       "Epoch 22/30\n",
-      "1/0 [======================================] - 0s 95ms/step - loss: 0.6599 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 73ms/step - loss: 0.4331 - accuracy: 0.7600\n",
       "Epoch 23/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.5857 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 145ms/step - loss: 0.3881 - accuracy: 0.8400\n",
       "Epoch 24/30\n",
-      "1/0 [======================================] - 0s 112ms/step - loss: 0.5461 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 56ms/step - loss: 0.4101 - accuracy: 0.8000\n",
       "Epoch 25/30\n",
-      "1/0 [======================================] - 0s 101ms/step - loss: 0.4708 - accuracy: 0.8000\n",
+      "1/0 [======================================] - 0s 135ms/step - loss: 0.3869 - accuracy: 0.7200\n",
       "Epoch 26/30\n",
-      "1/0 [======================================] - 0s 108ms/step - loss: 0.7307 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 95ms/step - loss: 0.4088 - accuracy: 0.8000\n",
       "Epoch 27/30\n",
-      "1/0 [======================================] - 0s 91ms/step - loss: 0.4998 - accuracy: 0.7200\n",
+      "1/0 [======================================] - 0s 125ms/step - loss: 0.4033 - accuracy: 0.8000\n",
       "Epoch 28/30\n",
-      "1/0 [======================================] - 0s 117ms/step - loss: 0.5110 - accuracy: 0.6800\n",
+      "1/0 [======================================] - 0s 59ms/step - loss: 0.5204 - accuracy: 0.8000\n",
       "Epoch 29/30\n",
-      "1/0 [======================================] - 0s 57ms/step - loss: 0.4548 - accuracy: 0.7600\n",
+      "1/0 [======================================] - 0s 141ms/step - loss: 0.3957 - accuracy: 0.7600\n",
       "Epoch 30/30\n",
-      "1/0 [======================================] - 0s 134ms/step - loss: 0.5453 - accuracy: 0.7200\n",
-      "Epoch 0\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 11ms/step - loss: 1.1301 - accuracy: 0.5000\n",
-      "Epoch 1\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.3081 - accuracy: 1.0000\n",
-      "Epoch 2\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.5533 - accuracy: 1.0000\n",
-      "Epoch 3\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 4ms/step - loss: 0.7819 - accuracy: 0.5000\n",
-      "Epoch 4\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.3472 - accuracy: 1.0000\n",
-      "Epoch 5\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.8488 - accuracy: 0.5000\n",
-      "Epoch 6\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.2700 - accuracy: 1.0000\n",
-      "Epoch 7\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.2363 - accuracy: 1.0000\n",
-      "Epoch 8\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1776 - accuracy: 1.0000\n",
-      "Epoch 9\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.8589 - accuracy: 0.5000\n",
-      "Epoch 10\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.1629 - accuracy: 1.0000\n",
-      "Epoch 11\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1424 - accuracy: 1.0000\n",
-      "Epoch 12\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.0945 - accuracy: 1.0000\n",
-      "Epoch 13\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0581 - accuracy: 1.0000\n",
-      "Epoch 14\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.4390 - accuracy: 0.5000\n",
-      "Epoch 15\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.6202 - accuracy: 0.5000\n",
-      "Epoch 16\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0578 - accuracy: 1.0000\n",
-      "Epoch 17\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1027 - accuracy: 1.0000\n",
-      "Epoch 18\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.1193 - accuracy: 1.0000\n",
-      "Epoch 19\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0971 - accuracy: 1.0000\n",
-      "Epoch 20\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.1271 - accuracy: 0.5000\n",
-      "Epoch 21\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.1877 - accuracy: 0.5000\n",
-      "Epoch 22\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 1.2760 - accuracy: 0.5000\n",
-      "Epoch 23\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.2594 - accuracy: 1.0000\n",
-      "Epoch 24\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.9682 - accuracy: 0.5000\n",
-      "Epoch 25\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.2332 - accuracy: 1.0000\n",
-      "Epoch 26\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.6348 - accuracy: 0.5000\n",
-      "Epoch 27\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.3113 - accuracy: 1.0000\n",
-      "Epoch 28\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.5042 - accuracy: 1.0000\n",
-      "Epoch 29\n",
-      "Epoch 1/1\n",
-      "2/2 [==============================] - 0s 2ms/step - loss: 0.3991 - accuracy: 1.0000\n"
+      "1/0 [======================================] - 0s 76ms/step - loss: 0.4804 - accuracy: 0.7200\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x235d7ab99b0>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -314,21 +238,21 @@
     "                    steps_per_epoch=len(X_train) / 32, epochs=epochs)\n",
     "\n",
     "# here's a more \"manual\" example\n",
-    "for e in range(epochs):\n",
-    "    print('Epoch', e)\n",
-    "    batches = 0\n",
-    "    for x_batch, y_batch in datagen.flow(X_train, labels, batch_size=2):\n",
-    "        model.fit(x_batch, y_batch)\n",
-    "        batches += 1\n",
-    "        if batches >= len(X_train) / 32:\n",
-    "            # we need to break the loop by hand because\n",
-    "            # the generator loops indefinitely\n",
-    "            break"
+    "# for e in range(epochs):\n",
+    "#     print('Epoch', e)\n",
+    "#     batches = 0\n",
+    "#     for x_batch, y_batch in datagen.flow(X_train, labels, batch_size=2):\n",
+    "#         model.fit(x_batch, y_batch)\n",
+    "#         batches += 1\n",
+    "#         if batches >= len(X_train) / 2:\n",
+    "#             # we need to break the loop by hand because\n",
+    "#             # the generator loops indefinitely\n",
+    "#             break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +276,7 @@
        "       [0.]], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +296,7 @@
        "(28, 28, 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
